[metadata]
name = networking-fortinet
summary = neutron plugin for fortigate
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    networking_fortinet
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_fortinet.ini

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    fortinet_migration = networking_fortinet.tools.migration:main
neutron.ml2.mechanism_drivers =
    fortinet = networking_fortinet.ml2.mech_fortinet:FortinetMechanismDriver
neutron.service_plugins =
    router_fortinet = networking_fortinet.services.l3_router.l3_fortinet:FortinetL3ServicePlugin
    fwaas_fortinet = networking_fortinet.services.firewall.fortinet_fwaas_plugin:FortinetFirewallPlugin
neutron.db.alembic_migrations =
    networking-fortinet = networking_fortinet.db.migration:alembic_migrations
tempest.test_plugins =
    networking-fortinet = networking_fortinet.tests.tempest_plugin.plugin:NeutronFortigateFWaaSPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_fortinet/locale/networking-fortinet.pot

[compile_catalog]
directory = networking_fortinet/locale
domain = networking_fortinet

[update_catalog]
domain = networking-fortinet
output_dir = neutron_fortinet/locale
input_file = networking_fortinet/locale/networking-fortinet.pot

[wheel]
universal = 1
